--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
       <div style = "width: 500px; margin: auto; background-color: aliceblue; text-align: center; border:2px solid darkgrey; pad: 5px">
         <a href = "assign03.html"> Home </a> 
         <span> &nbsp </span>
-        <a href = "assign03.html#Schedule"> My Schedule </a> 
-        <span> &nbsp </span>
-        <a href = "assign03.html#quote"> Our Town Quote </a> 
+        <a href = “index.html#quote"> Our Town Quote </a> 
         <span> &nbsp </span>
       </div>
     </header>  
