--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header id = "header">
       <div style = "width: 500px; margin: auto; background-color: aliceblue; text-align: center; border:2px solid darkgrey; pad: 5px">
-        <a href = "assign03.html"> Home </a> 
+        <a href = “index.html"> Home </a> 
         <span> &nbsp </span>
         <a href = “index.html#quote"> Our Town Quote </a> 
         <span> &nbsp </span>
@@ -25,9 +25,7 @@
     
     <div style = "width: 700px; margin: auto; background-color: white; font-family: Arial;">
       <h3>About Me</h3>
-      <p>I am a Computer Science Major currently in my <em>8th semester.</em> <br/> Creditwise, I am a senior,
-        though I've only been in this program for two years now.<br/> Thus, I still have three semesters left,
-        plus my internship. <br />
+      <p>I am a Computer Science Major currently in my <em>11th semester.</em>
         I have changed my major many times now and finally settled on Computer Science.<br />
         I was born in Renton, Washington and lived a large portion of my life in Kent, WA<br/> before moving to
         Vernon, Connecticut.
@@ -51,98 +49,9 @@
       <hr/><br/>
     </div>
         
-    <div style = "font-family: 'Palatino Linotype';
-                  width: 800px; 
-                  margin: auto; 
-                  text-align: left; 
-                  pad: 10px">
-      <form action = "" id = "form">
-        <br/><hr></hr>
-        <h2 style = "text-align: center; font-family: 'Times New Roman';">
-          Star Trek Survey
-          <br/>
-        </h2>
-        <table style = "text-align: left;
-                        width: 700px;
-                        cellpadding = '7px'; 
-                        margin: auto;
-                        background-color: #ff9966">
-                       <!--lcars orange-->
-          <tr>
-            <td>
-              Name: 
-            </td>
-            <td>
-              <input type = "text" size = "60" name = "name"/>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              Major: 
-            </td>
-            <td>
-              <input type = "text" size = "60" name = "major"/>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <p>Do you like Star Trek?</p>
-            </td>
-            <td>
-              <input type = "radio" name = "radioButtons" value = "peor"> Not at all </input>
-              <input type = "radio" name = "radioButtons" value = "mal"> Not really </input>
-              <input type = "radio" name = "radioButtons" value = "bueno"> Kinda </input>
-              <input type = "radio" name = "radioButtons" value = "mejor"> Oh Yeah! </input>
-            </td>
-          </tr>
-        </table>
-
-        <p>Which Star Trek series do you like? &nbsp
-          <input type = "checkbox" name = "TOS" value = "tos"> TOS </input>
-          <input type = "checkbox" name = "TAS" value = "tas"> TAS </input>
-          <input type = "checkbox" name = "TNG" value = "tos"> TNG </input>
-          <input type = "checkbox" name = "DS9" value = "ds9"> DS9 </input>
-          <input type = "checkbox" name = "VOY" value = "voy"> VOY </input>
-          <input type = "checkbox" name = "ENT" value = "ent"> ENT </input>
-        </p>
-
-        <p>
-          <label> How many of the previous acronyms do you know the meaning of?
-            <select name = "acronymns">
-              <option> None </option>              
-              <option> One </option>
-              <option> Two </option>
-              <option> Three </option>
-              <option> Four </option>
-              <option> Five </option>
-              <option> Six </option>
-            </select>
-          </label>
-        </p>
-
-        <p>
-          <label>
-            <textarea name = "Reasons"  
-                      rows = "5"  
-                      cols = "90"
-                      placeholder = "Please explain why you do or do not like Star Trek here"
-                      background-color = "#9999ff"></textarea> 
-                           <!--lcars light blue-->
-          </label>
-        </p>
-
-        <br/>
-        <input type = "submit" value = "Submit Form"/>
-        <input type = "reset" value = "Clear Form"/>        
-        <br/>
-        <br/>
-      </form>
-      <hr/><br/>
-    </div>
-
     <footer>
       <div style = "width: 500px; margin: auto; background-color: aliceblue; text-align: center; border:2px solid darkgrey; pad: 5px">
-        <a href = "assign03.html#header">
+        <a href = “index.html#header">
         <img border="0" src="http://www.huffingtonpost.ca/images/v/home_icon.png" alt="Home Page" width="32" height="32"></a>
         <span>&nbsp</span>
 
