reorganized and added second page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns = "http://www.w3.org/1999/xhtml">
   
+
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title> Chris Vergaray's Enhanced Home Page </title>
+    <title> Chris Vergaray's Home Page </title>
+    <link rel="stylesheet" type="text/css" href=“customCSS.css" />
   </head>
 
   <body style = "text-align: center;">    
@@ -13,7 +15,7 @@
       <div style = "width: 500px; margin: auto; background-color: aliceblue; text-align: center; border:2px solid darkgrey; pad: 5px">
         <a href = “index.html"> Home </a> 
         <span> &nbsp </span>
-        <a href = “index.html#quote"> Our Town Quote </a> 
+        <a href = “assignments.html"> Assignments Page </a> 
         <span> &nbsp </span>
       </div>
     </header>  
