fixed broken links

--- a/assignments.html
+++ b/assignments.html
@@ -5,22 +5,22 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <title> Chris Vergaray's Assignment #2 </title>
+    <link rel="stylesheet" type="text/css" href="customCSS.css" />
   </head>
   
   
   <header>
     <div style = "width: 500px; margin: auto; background-color: aliceblue; text-align: center; border:2px solid darkgrey; pad: 5px">
       <a href = "index.html"> home </a>
-      <a href = "assign02.html"> CS 213 Assignments</a>
+      <a href = "assignments.html"> CS 213 Assignments</a>
     </div>
   </header>
   
-  <body bgcolor = "#ffffff"
-        style = "text-align: center;">
+  <body>
     
-    <div style = "width: 700px; margin: auto; background-color: white;">
-      <h1 style = “text-align: center;”> CS 213 Assignments</h1>
-      <h1 style = “text-align: center;”> This Page is Under Construction</h1>
+    <div>
+      <h1> CS 213 Assignments</h1>
+      <h1> This Page is Under Construction</h1>
     </div>
 
     <div style = "text-align: left; width: 400px; margin: auto; background-color: white;">
