--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <title> Chris Vergaray's Home Page </title>
-    <link rel="stylesheet" type="text/css" href=“customCSS.css" />
+    <link rel="stylesheet" type="text/css" href="customCSS.css" />
   </head>
 
   <body style = "text-align: center;">    
 
     <header id = "header">
       <div style = "width: 500px; margin: auto; background-color: aliceblue; text-align: center; border:2px solid darkgrey; pad: 5px">
-        <a href = “index.html"> Home </a> 
+        <a href = "index.html"> Home </a> 
         <span> &nbsp </span>
-        <a href = “assignments.html"> Assignments Page </a> 
+        <a href = "assignments.html"> Assignments Page </a> 
         <span> &nbsp </span>
       </div>
     </header>  
