cleaned up the index page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="customCSS.css" />
   </head>
 
-  <body style = "text-align: center;">    
+  <body>    
 
     <header id = "header">
       <div>
@@ -18,9 +18,9 @@
         <a href = "assignments.html"> Assignments Page </a> 
         <span> &nbsp </span>
       </div>
+    <h1> Welcome to Chris Vergaray's Home Page!</h1>    
     </header>  
     
-    <h1> Welcome to Chris Vergaray's Home Page!</h1>    
     <div>
       <img src = "computer.jpg" alt = "Typical view of me as a kid" border = "2px solid" />
     </div>
@@ -35,7 +35,6 @@
     </div>
     
     <div>
-         id = "quote">
       <hr></hr>
       <p>
         When I am tempted to let a moment of my life pass unappreciated, I remember my favorite line from one of my favorite plays:<br/>
