fixed some formatting

--- a/assignments.html
+++ b/assignments.html
@@ -10,7 +10,7 @@
   
   
   <header>
-    <div style = "width: 500px; margin: auto; background-color: aliceblue; text-align: center; border:2px solid darkgrey; pad: 5px">
+    <div>
       <a href = "index.html"> home </a>
       <a href = "assignments.html"> CS 213 Assignments</a>
     </div>
@@ -23,7 +23,7 @@
       <h1> This Page is Under Construction</h1>
     </div>
 
-    <div style = "text-align: left; width: 400px; margin: auto; background-color: white;">
+    <div>
       <p>
         <ul>
           <li><a href="assignments.html"> Future assignments here</a></li>
