corrected the course number on the assignments page

--- a/assignments.html
+++ b/assignments.html
@@ -12,14 +12,15 @@
   <header>
     <div>
       <a href = "index.html"> home </a>
-      <a href = "assignments.html"> CS 213 Assignments</a>
+      <span> &nbsp </span>
+      <a href = "assignments.html"> CS 313 Assignments</a>
     </div>
   </header>
   
   <body>
     
     <div>
-      <h1> CS 213 Assignments</h1>
+      <h1> CS 313 Assignments</h1>
       <h1> This Page is Under Construction</h1>
     </div>
 
