Upload everything for now && git push && git push GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div>
       <h3>About Me</h3>
       <p>I am a Computer Science Major currently in my <em>11th semester.</em>
-        I have changed my major many times now and finally settled on Computer Science.<br />
+        I have changed my major many times now and finally settled on Computer Science.<br/>
         I was born in Renton, Washington and lived a large portion of my life in Kent, WA<br/> before moving to
         Vernon, Connecticut.
       </P>
@@ -39,7 +39,8 @@
     <div>
       <hr></hr>
       <p>
-        When I am tempted to let a moment of my life pass unappreciated, I remember my favorite line from one of my favorite plays:<br/>
+        When I am tempted to let a moment of my life pass unappreciated, </br> 
+        I remember my favorite line from one of my favorite plays:<br/>
         <blockquote>
           <b>"Does anyone ever realize life while they live it... every, every minute?"</b><br/>
           <i>-Thornton Wilder, Our Town</i>
@@ -52,8 +53,6 @@
       <div>
         <a href = "index.html">
         <img border="0" src="http://www.huffingtonpost.ca/images/v/home_icon.png" alt="Home Page" width="32" height="32"></a>
-        <span>&nbsp</span>
-
       </div>
     </footer>
   </body>
