Added dynamic content

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
     <div>
         <p><br/></p>
-      <img src = "computer.jpg" alt = "Typical view of me as a kid" border = "2px solid" />
+      <img src = "images/computer.jpg" alt = "Typical view of me as a kid" border = "2px solid" 
+       onmouseover = "this.src='map_location_revealed.gif';"
+       onmouseout = "this.src=‘images’/computer joke.jpg;"/>
     </div>
     
     <div>
