Fixed stupid quotation mark issues

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div>
         <p><br/></p>
       <img src = "images/computer.jpg" alt = "Typical view of me as a kid" border = "2px solid" 
-       onmouseover = "this.src=‘images/computer.jpg’;”
-       onmouseout = "this.src=‘images/computer Joke.jpg’;”/>
+       onmouseover = "this.src=‘images/computer.jpg’;"
+       onmouseout = "this.src=‘images/computer Joke.jpg’;"/>
     </div>
     
     <div>
