--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p><br/></p>
       <img src = "images/computer.jpg" alt = "Typical view of me as a kid" border = "2px solid" 
        onmouseover = "this.src=‘images/computer.jpg’;"
-       onmouseout = "this.src=‘images/Computer Joke.jpg’;"/>
+       onmouseout = "this.src=‘images/computerJoke.jpg’;"/>
     </div>
     
     <div>
