Added old webpage link to the assignments page

--- a/assignments.html
+++ b/assignments.html
@@ -27,7 +27,7 @@
     <div>
       <p>
         <ul>
-          <li><a href="assignments.html"> Future assignments here</a></li>
+          <li><a href="index3.html"> Old Home Page</a></li>
           <li><a href="assignments.html"> Future assignments here</a></li>
         </ul>
         
