--- a/assignments.html
+++ b/assignments.html
@@ -28,8 +28,7 @@
       <p>
         <ul>
           <li><a href="index3.html"> Old Home Page</a></li>
-          <li><a href="form.php"> Form Version 1</a></li>
-          <li><a href="form2.php"> Form Version 2</a></li>
+          <li><a href="form2.php"> Star Trek Survey</a></li>
         </ul>
         
       </p>
