Added new video that doesn't have sync issues

--- a/spiritual_thought.html
+++ b/spiritual_thought.html
@@ -22,12 +22,12 @@
     </header>  
     
 
-    <div>
+    <div style = "max-width: 150px">
       <p>One of my favorite TED Talks was given by a gentlemen named Benjamin Zander. He is the conductor of The Boston Philharmonic Orchestra and the Boston Philharmonic Youth Orchestra. In this TED Talk, he discusses the transformative power of classical music, but the part that really stuck out to me was what he said at the end, which you can watch here: <br> <br>
       </P>
     </div>
 
-<iframe src="https://onedrive.live.com/embed?cid=1E928EAB845AFAAA&resid=1E928EAB845AFAAA%216856&authkey=AHyocTTL6LyCgts" width="320" height="178" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://onedrive.live.com/embed?cid=1E928EAB845AFAAA&resid=1E928EAB845AFAAA%216858&authkey=APmnFmpU2DI6avg" width="320" height="178" frameborder="0" scrolling="no"></iframe>
     
     <div>
       <hr></hr>
