--- a/spiritual_thought.html
+++ b/spiritual_thought.html
@@ -22,22 +22,20 @@
     </header>  
     
 
-    <div style = "max-width: 600px">
-      <p>One of my favorite TED Talks was given by a gentlemen named Benjamin Zander. He is the conductor of The Boston Philharmonic Orchestra and the Boston Philharmonic Youth Orchestra. In this TED Talk, he discusses the transformative power of classical music, but the part that really stuck out to me was what he said at the end, which you can watch here: <br> <br>
+    <div style = "max-width: 600px; text-align: center;">
+      <p><br><br> One of my favorite TED Talks was given by a gentlemen named Benjamin Zander. He is the conductor of The Boston Philharmonic Orchestra and the Boston Philharmonic Youth Orchestra. In this TED Talk, he discusses the transformative power of classical music, but the part that really stuck out to me was what he said at the end, which you can watch here: <br> <br>
       </P>
     </div>
 
 <iframe src="https://onedrive.live.com/embed?cid=1E928EAB845AFAAA&resid=1E928EAB845AFAAA%216858&authkey=APmnFmpU2DI6avg" width="320" height="178" frameborder="0" scrolling="no"></iframe>
     
-    <div>
-      <hr></hr>
-      <p>
-        When I am tempted to let a moment of my life pass unappreciated, </br> 
-        I remember my favorite line from one of my favorite plays:<br/>
+    <div style = "max-width: 600px; text-align: center;">
+      <p> I love the description he provides, in that we know that we are bringing out the potential in others when we see their eyes shining. Interestingly enough, James E. Faust described a similar thing occurring with those studying at the BYU Jerusalem Center:
         <blockquote>
-          <b>"Does anyone ever realize life while they live it... every, every minute?"</b><br/>
-          <i>-Thornton Wilder, Our Town</i>
+          <b>"I recently recalled a historic meeting in Jerusalem about 17 years ago. It was regarding the lease for the land on which the Brigham Young University’s Jerusalem Center for Near Eastern Studies was later built. Before this lease could be signed, President Ezra Taft Benson and Elder Jeffrey R. Holland, then president of Brigham Young University, agreed with the Israeli government on behalf of the Church and the university not to proselyte in Israel. You might wonder why we agreed not to proselyte. We were required to do so in order to get the building permit to build that magnificent building which stands in the historic city of Jerusalem. To our knowledge the Church and BYU have scrupulously and honorably kept that nonproselyting commitment. After the lease had been signed, one of our friends insightfully remarked, “Oh, we know that you are not going to proselyte, but what are you going to do about the light that is in their eyes?"</b><br/>
+          <i>James E. Faust <br> Oct 2005 General Conference<br></i>
         </blockquote>      
+Also, we know from the Doctorine & Covenants that "For word of the Lord is truth, and whatsoever is truth is light, and whatsoever is light is Spirit, even the Spirit of Jesus Christ." Thus, the light that is seen in our eyes and the eyes of those around us is the spirit, and it is truth. It is the Lord that gives us shining eyes because he provides us with his truth. However, he also expects us to provide that truth to those around us. As disciples of Christ, our influence can bring light to the eyes of those around us. Therefore, as we go about our days, I invite all to look around themselves and see if the eyes are shining. If they are, we know we are doing it. If not, we know we must ask ourselves, "Who am I being that the eyes of those around me are not shining?" or even, "Who am I <b>NOT</b> being that the eyes of those around me are not shining?"
       </p>
       <hr/><br/>
     </div>
