--- a/spiritual_thought.html
+++ b/spiritual_thought.html
@@ -23,7 +23,7 @@
     
 
     <div class = "mainContent">
-      <p><br><br> One of my favorite TED Talks was given by a gentlemen named Benjamin Zander. He is the conductor of The Boston Philharmonic Orchestra and the Boston Philharmonic Youth Orchestra. In this TED Talk, he discusses the transformative power of classical music, but the part that really stuck out to me was what he said at the end, which you can watch here: <br> <br>
+      <p> One of my favorite TED Talks was given by a gentlemen named Benjamin Zander. He is the conductor of The Boston Philharmonic Orchestra and the Boston Philharmonic Youth Orchestra. In this TED Talk, he discusses the transformative power of classical music, but the part that really stuck out to me was what he said at the end, which you can watch here:
       </P>
     </div>
 
@@ -37,7 +37,7 @@
         </blockquote>      
 Also, we know from the Doctorine & Covenants that "For word of the Lord is truth, and whatsoever is truth is light, and whatsoever is light is Spirit, even the Spirit of Jesus Christ." Thus, the light that is seen in our eyes and the eyes of those around us is the spirit, and it is truth. It is the Lord that gives us shining eyes because he provides us with his truth. However, he also expects us to provide that truth to those around us. As disciples of Christ, our influence can bring light to the eyes of those around us. Therefore, as we go about our days, I invite all to look around themselves and see if the eyes are shining. If they are, we know we are doing it. If not, we know we must ask ourselves, "Who am I being that the eyes of those around me are not shining?" or even, "Who am I <b>NOT</b> being that the eyes of those around me are not shining?"
       </p>
-      <hr/><br/>
+      <br/>
     </div>
         
     <footer>
