Initial commit for Katie's Kitchen

--- a/assignments.html
+++ b/assignments.html
@@ -29,6 +29,7 @@
         <ul>
           <li><a href="index3.html"> Old Home Page</a></li>
           <li><a href="form2.php"> Star Trek Survey</a></li>
+          <li><a href="Katie's_Kitchen/KKitchen.php"> Katie's Kitchen</a></li>
         </ul>
         
       </p>
