Preparing assignment to turn in

--- a/assignments.html
+++ b/assignments.html
@@ -1,38 +1,37 @@
-<?xml version = "1.0"? encoding = "utf-8">
 <!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.0 Strict//EN" http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd>
 <html xmlns = "http://www.w3.org/1999/xhtml">
-  
-  <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title> Chris Vergaray's Assignment #2 </title>
-    <link rel="stylesheet" type="text/css" href="customCSS.css" />
-  </head>
-  
-  
-  <header>
-    <div>
-      <a href = "index.html"> home </a>
-      <span> &nbsp </span>
-      <a href = "assignments.html"> CS 313 Assignments</a>
-    </div>
-  </header>
-  
-  <body>
-    
-    <div>
-      <h1> CS 313 Assignments</h1>
-      <h1> This Page is Under Construction</h1>
-    </div>
 
-    <div>
-      <p>
-        <ul>
-          <li><a href="index3.html"> Old Home Page</a></li>
-          <li><a href="form2.php"> Star Trek Survey</a></li>
-          <li><a href="Katie's_Kitchen/KKitchen.php"> Katie's Kitchen</a></li>
-        </ul>
-        
-      </p>
-    </div>
-  </body>
+   <head>
+      <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+      <title> Chris Vergaray's Assignment #2 </title>
+      <link rel="stylesheet" type="text/css" href="customCSS.css" />
+   </head>
+
+
+   <header>
+      <div>
+         <a href = "index.html"> home </a>
+         <span> &nbsp </span>
+         <a href = "assignments.html"> CS 313 Assignments</a>
+      </div>
+   </header>
+
+   <body>
+
+      <div>
+         <h1> CS 313 Assignments</h1>
+         <h1> This Page is Under Construction</h1>
+      </div>
+
+      <div>
+         <p>
+            <ul>
+               <li><a href="index3.html"> Old Home Page</a></li>
+               <li><a href="form2.php"> Star Trek Survey</a></li>
+               <li><a href="Katie's_Kitchen/KKitchen.php"> Katie's Kitchen</a></li>
+               <li><a href="Katie's_Kitchen/add_product.php"> Add a product to Katie's Kitchen</a></li>
+            </ul>
+         </p>
+      </div>
+   </body>
 </html>
