Added discussion thread to assignments

--- a/assignments.html
+++ b/assignments.html
@@ -30,6 +30,7 @@
                <li><a href="form2.php"> Star Trek Survey</a></li>
                <li><a href="Katie's_Kitchen/KKitchen.php"> Katie's Kitchen</a></li>
                <li><a href="Katie's_Kitchen/add_product.php"> Add a product to Katie's Kitchen</a></li>
+               <li><a href="http://tomcat-cvergara.rhcloud.com/discussionThread/index.jsp">Join the discussion thread </a></li>
             </ul>
          </p>
       </div>
